--- a/webPage/pages/abstract.html
+++ b/webPage/pages/abstract.html
@@ -38,59 +38,7 @@
 					</div>
 				</div>
 				<a id="toggle_nav_btn" class="toggle-left-nav-btn inline-block ml-20 pull-left" href="javascript:void(0);"><i class="zmdi zmdi-menu"></i></a>
-				<a id="toggle_mobile_search" data-toggle="collapse" data-target="#search_form" class="mobile-only-view" href="javascript:void(0);"><i class="zmdi zmdi-search"></i></a>
 				<a id="toggle_mobile_nav" class="mobile-only-view" href="javascript:void(0);"><i class="zmdi zmdi-more"></i></a>
-			</div>
-			<div id="mobile_only_nav" class="mobile-only-nav pull-right">
-				<ul class="nav navbar-right top-nav pull-right">
-					<li class="dropdown app-drp">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="zmdi zmdi-apps top-nav-icon"></i></a>
-						<ul class="dropdown-menu app-dropdown" data-dropdown-in="slideInRight" data-dropdown-out="flipOutX">
-							<li>
-								<div class="app-nicescroll-bar">
-									<ul class="app-icon-wrap pa-10">
-										<li>
-											<a target="_blank" href="abstract.html" class="connection-item">
-											<i class="zmdi zmdi-chart txt-info"></i>
-											<span class="block">概要统计</span>
-											</a>
-										</li>
-										<li>
-											<a target="_blank" href="detail.html" class="connection-item">
-											<i class="zmdi zmdi-view-list-alt txt-success"></i>
-											<span class="block">详细信息</span>
-											</a>
-										</li>
-										<li>
-											<a target="_blank" href="usage.html" class="connection-item">
-											<i class="zmdi zmdi-pin-help txt-primary"></i>
-											<span class="block">使用方法</span>
-											</a>
-										</li>
-										<li>
-											<a target="_blank" href="intro.html" class="connection-item">
-											<i class="zmdi zmdi-puzzle-piece txt-danger"></i>
-											<span class="block">系统介绍</span>
-											</a>
-										</li>
-										<li>
-											<a target="_blank" href="about.html" class="connection-item">
-											<i class="zmdi zmdi-accounts txt-warning"></i>
-											<span class="block">关于我们</span>
-											</a>
-										</li>
-										<li>
-											<a target="_blank" href="download.html" class="connection-item">
-											<i class="zmdi zmdi-download"></i>
-											<span class="block">下载专区</span>
-											</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-						</ul>
-					</li>
-				</ul>
 			</div>
 		</nav>
 		<!-- /Top Menu Items -->
@@ -105,16 +53,22 @@
 				<li>
 					<a target="_blank" href="index.html"><div class="pull-left"><i class="zmdi zmdi-star-circle mr-20"></i><span class="right-nav-text">主页</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
+				<li>
+					<a target="_blank" class="active" href="abstract.html"><div class="pull-left"><i class="zmdi zmdi-chart mr-20"></i><span class="right-nav-text">概要统计</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
 					<span>统计</span>
 					<i class="zmdi zmdi-more"></i>
 				</li>
 				<li>
-					<a class="active" target="_blank" href="abstract.html"><div class="pull-left"><i class="zmdi zmdi-chart mr-20"></i><span class="right-nav-text">概要统计</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="inner_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">内网IP信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a target="_blank" href="detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="ua_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">UA详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+				</li>
+				<li>
+					<a target="_blank" href="outer_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">通信服务器信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
