--- a/webPage/pages/ua_detail.html
+++ b/webPage/pages/ua_detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<title>MAD|使用方法</title>
+	<title>MAD|UA详细信息</title>
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="../img/favicon.png">
@@ -18,8 +18,38 @@
 	<!-- Morris Charts CSS -->
     <link href="../vendors/bower_components/morris.js/morris.css" rel="stylesheet" type="text/css"/>
 
+	<!-- vector map CSS -->
+	<link href="../vendors/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" type="text/css"/>
+
+	<!-- Footable CSS -->
+	<link href="../vendors/bower_components/FooTable/compiled/footable.bootstrap.min.css" rel="stylesheet" type="text/css"/>
+
 	<!-- Custom CSS -->
 	<link href="dist/css/style.css" rel="stylesheet" type="text/css">
+
+    <!-- jQuery -->
+    <script src="../vendors/bower_components/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript">
+		$.getJSON ("/report/Background_PC/index.json", function (data) {
+		    $.each(data, function (i, item) {
+				$.getJSON(item, function (data) {
+					$.each(data, function (i, item) {
+					    var info = item.info;
+						$("#results-display").append("<tr><td>" + item.srcIP +
+							"</td><td>" + item.srcPort +
+							"</td><td>" + item.dstIP +
+							"</td><td>" + item.dstPort +
+							"</td><td>" + item.time +
+							"</td><td>" + item.UA +
+							"</td><td>" + info.comment +
+							"</td><td>" + info.desc +
+							"</td><td>" + info.link +
+							"</td><td>" + info.type + "</td></tr>");
+					});
+				});
+			});
+        });
+	</script>
 </head>
 
 <body>
@@ -71,7 +101,7 @@
 					<a target="_blank" href="ua_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">UA详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a target="_blank" href="outer_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">通信服务器信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" class="active" href="outer_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">通信服务器信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
@@ -79,7 +109,7 @@
 					<i class="zmdi zmdi-more"></i>
 				</li>
 				<li>
-					<a target="_blank" class="active" href="usage.html"><div class="pull-left"><i class="zmdi zmdi-pin-help mr-20"></i><span class="right-nav-text">使用方法</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="usage.html"><div class="pull-left"><i class="zmdi zmdi-pin-help mr-20"></i><span class="right-nav-text">使用方法</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
 					<a target="_blank" href="intro.html"><div class="pull-left"><i class="zmdi zmdi-puzzle-piece mr-20"></i><span class="right-nav-text">系统介绍</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
@@ -99,6 +129,56 @@
 		<div class="page-wrapper">
             <div class="container-fluid pt-25">
 
+				<!-- Title -->
+				<div class="row heading-bg">
+					<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+					  <h5 class="txt-dark">UA详细信息</h5>
+					</div>
+					<!-- Breadcrumb -->
+					<div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
+					  <ol class="breadcrumb">
+						<li><a href="index.html">主页</a></li>
+						<li><a href="#"><span>统计</span></a></li>
+						<li class="active"><span>UA详细信息</span></li>
+					  </ol>
+					</div>
+					<!-- /Breadcrumb -->
+				</div>
+				<!-- /Title -->
+
+				<!-- Row -->
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="panel panel-default card-view">
+							<div class="panel-wrapper collapse in">
+								<div class="panel-body">
+									<div class="table-wrap">
+										<table id="footable_3" class="table" data-filtering="true"  data-show-toggle="false">
+											<thead>
+												<tr>
+													<th>Src IP</th>
+													<th>Src Port</th>
+													<th>Dst IP</th>
+													<th>Dst Port</th>
+													<th>Time</th>
+													<th data-breakpoints="all" data-title="User-Agent">User-Agent</th>
+													<th data-breakpoints="all" data-title="Comment">Comment</th>
+													<th data-breakpoints="all" data-title="Description">Description</th>
+													<th data-breakpoints="all" data-title="Link">Link</th>
+													<th data-breakpoints="all" data-title="Type">Type</th>
+												</tr>
+											</thead>
+											<tbody id="results-display">
+											</tbody>
+										</table>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /Row -->
+
 			</div>
 
 			<!-- Footer -->
@@ -117,10 +197,9 @@
     </div>
     <!-- /#wrapper -->
 
+
 	<!-- JavaScript -->
 
-    <!-- jQuery -->
-    <script src="../vendors/bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="../vendors/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -132,18 +211,13 @@
 	<script src="../vendors/bower_components/jszip/dist/jszip.min.js"></script>
 	<script src="../vendors/bower_components/pdfmake/build/pdfmake.min.js"></script>
 	<script src="../vendors/bower_components/pdfmake/build/vfs_fonts.js"></script>
+	<script src="../vendors/bower_components/moment/min/moment.min.js"></script>
+	<script src="../vendors/bower_components/FooTable/compiled/footable.min.js" type="text/javascript"></script>
+	<script src="dist/js/footable-data.js"></script>
 
-	<script src="../vendors/bower_components/datatables.net-buttons/js/buttons.html5.min.js"></script>
-	<script src="../vendors/bower_components/datatables.net-buttons/js/buttons.print.min.js"></script>
-	<script src="dist/js/export-table-data.js"></script>
 
 	<!-- Slimscroll JavaScript -->
 	<script src="dist/js/jquery.slimscroll.js"></script>
-
-	<!-- simpleWeather JavaScript -->
-	<script src="../vendors/bower_components/moment/min/moment.min.js"></script>
-	<script src="../vendors/bower_components/simpleWeather/jquery.simpleWeather.min.js"></script>
-	<script src="dist/js/simpleweather-data.js"></script>
 
 	<!-- Progressbar Animation JavaScript -->
 	<script src="../vendors/bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
@@ -171,11 +245,6 @@
 	<!-- Init JavaScript -->
 	<script src="dist/js/index/init.js"></script>
 	<script src="dist/js/dashboard-data.js"></script>
-
-    <!-- Morris Charts JavaScript -->
-    <script src="../vendors/bower_components/raphael/raphael.min.js"></script>
-    <script src="../vendors/bower_components/morris.js/morris.min.js"></script>
-    <script src="dist/js/morris-data.js"></script>
 </body>
 
 </html>
