--- a/webPage/pages/inner_detail.html
+++ b/webPage/pages/inner_detail.html
@@ -49,14 +49,14 @@
 							"<div class=\"modal-header\">" +
 							"<button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-hidden=\"true\">×</button>" +
 							"<h5 class=\"modal-title\" id=\"myLargeModalLabel\">详细信息</h5>" +
-							"</div><div class=\"modal-body\">" +
+							"</div><div class=\"modal-body\"><div class=\"table-wrap\">" +
 							"<table class=\"table footable_3\" data-filtering=\"true\"  data-show-toggle=\"false\">" +
 							"<thead><tr><th>名称</th><th>第一次运行时间</th><th>最后一次运行时间</th><th>种类</th>" +
 							"<th data-breakpoints=\"all\" data-title=\"备注\">备注</th>" +
 							"<th data-breakpoints=\"all\" data-title=\"描述\">描述</th>" +
 							"<th data-breakpoints=\"all\" data-title=\"链接\">链接</th>" +
 							"<th data-breakpoints=\"all\" data-title=\"类型\">类型</th></tr></thead><tbody>" +
-							UATable + "</tbody></table></div><div class=\"modal-footer\">" +
+							UATable + "</tbody></table></div></div><div class=\"modal-footer\">" +
 							"<button type=\"button\" class=\"btn btn-danger text-left\" data-dismiss=\"modal\">Close</button>" +
 							"</div></div></div></div>";
 						UATable = "<tr><td>" + item.IP +
