--- a/webPage/pages/inner_detail.html
+++ b/webPage/pages/inner_detail.html
@@ -51,7 +51,7 @@
 							"<h5 class=\"modal-title\" id=\"myLargeModalLabel\">详细信息</h5>" +
 							"</div><div class=\"modal-body\"><div class=\"table-wrap\">" +
 							"<table class=\"table footable_3\" data-filtering=\"true\"  data-show-toggle=\"false\">" +
-							"<thead><tr><th>名称</th><th>第一次运行时间</th><th>最后一次运行时间</th><th>种类</th>" +
+							"<thead><tr><th data-breakpoints=\"xs\">名称</th><th>第一次运行时间</th><th data-breakpoints=\"xs\">最后一次运行时间</th><th data-breakpoints=\"xs sm\">种类</th>" +
 							"<th data-breakpoints=\"all\" data-title=\"comment\">备注</th>" +
 							"<th data-breakpoints=\"all\" data-title=\"description\">描述</th>" +
 							"<th data-breakpoints=\"all\" data-title=\"link\">链接</th>" +
