--- a/webPage/pages/inner_detail.html
+++ b/webPage/pages/inner_detail.html
@@ -50,7 +50,7 @@
 							"<button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-hidden=\"true\">×</button>" +
 							"<h5 class=\"modal-title\" id=\"myLargeModalLabel\">详细信息</h5>" +
 							"</div><div class=\"modal-body\"><div class=\"table-wrap\">" +
-							"<table class=\"table footable_3\" data-filtering=\"true\"  data-show-toggle=\"false\">" +
+							"<table id=\"footable_" + item.IP.replace(/\./g,"_") + "\" class=\"table\" data-filtering=\"true\"  data-show-toggle=\"false\">" +
 							"<thead><tr><th data-breakpoints=\"xs\">名称</th><th>第一次运行时间</th><th data-breakpoints=\"xs\">最后一次运行时间</th><th data-breakpoints=\"xs sm\">种类</th>" +
 							"<th data-breakpoints=\"all\" data-title=\"comment\">备注</th>" +
 							"<th data-breakpoints=\"all\" data-title=\"description\">描述</th>" +
@@ -173,7 +173,7 @@
 							<div class="panel-wrapper collapse in">
 								<div class="panel-body">
 									<div class="table-wrap">
-										<table class="table footable_3" data-filtering="true"  data-show-toggle="false">
+										<table id="footable_3" class="table" data-filtering="true"  data-show-toggle="false">
 											<thead>
 												<tr>
 													<th>IP地址</th>
