--- a/webPage/pages/inner_detail.html
+++ b/webPage/pages/inner_detail.html
@@ -9,6 +9,9 @@
 	<link rel="shortcut icon" href="../img/favicon.png">
 	<link rel="icon" href="../img/favicon.png" type="image/x-icon">
 
+	<!-- Data table CSS -->
+	<link href="../vendors/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/>
+
 	<!-- vector map CSS -->
 	<link href="../vendors/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" type="text/css"/>
 
@@ -172,18 +175,20 @@
 							<div class="panel-wrapper collapse in">
 								<div class="panel-body">
 									<div class="table-wrap">
-										<table id="footable_3" class="table" data-filtering="true"  data-show-toggle="false">
-											<thead>
-												<tr>
-													<th>IP地址</th>
-													<th>UA总数</th>
-													<th>恶意UA数量</th>
-													<th>查看所有UA</th>
-												</tr>
-											</thead>
-											<tbody id="results-display">
-											</tbody>
-										</table>
+										<div class="table-responsive">
+											<table id="datable_1" class="table table-hover display  pb-30">
+												<thead>
+													<tr>
+														<th>IP地址</th>
+														<th>UA总数</th>
+														<th>恶意UA数量</th>
+														<th>查看所有UA</th>
+													</tr>
+												</thead>
+												<tbody id="results-display">
+												</tbody>
+											</table>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -217,6 +222,8 @@
 		<script src="../vendors/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 		<!-- Data table JavaScript -->
+		<script src="../vendors/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
+		<script src="dist/js/dataTables-data.js"></script>
 		<script src="../vendors/bower_components/moment/min/moment.min.js"></script>
 		<script src="../vendors/bower_components/FooTable/compiled/footable.min.js" type="text/javascript"></script>
 		<script src="dist/js/footable-data.js"></script>
