--- a/webPage/pages/inner_detail2.html
+++ b/webPage/pages/inner_detail2.html
@@ -7,7 +7,7 @@
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="../img/favicon.png">
-	<link rel="icon" href="../img/favicon.png" type="image/x-icon">>
+	<link rel="icon" href="../img/favicon.png" type="image/x-icon">
 
 	<!-- Data table CSS -->
 	<link href="../vendors/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/>
@@ -20,7 +20,49 @@
 
     <!-- jQuery -->
     <script src="../vendors/bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="dist/js/inner_detail.js"></script>
+	<script type="text/javascript">
+		$.getJSON ("testFiles/index.json", function (data) {
+//		$.getJSON ("/report/innerIP/index.json", function (data) {
+		    $.each(data, function (i, item) {
+				$.getJSON(item, function (data) {
+					$.each(data, function (i, item) {
+					    var UA = item.UA;
+					    var UATable = "";
+					    for(var i=0;i<UA.length;i++){
+							var info = UA[i].info;
+							UATable = UATable + "<div class=\"row\"><div class=\"col-md-6\"><h6 class=\"text-center\">名称</h6><p class=\"text-center\">" + UA[i].name +	"</p></div><div class=\"col-md-6\"><h6 class=\"text-center\">备注</h6><p class=\"text-center\">" + info.comment + "</p></div></div>" +
+								"<div class=\"row\"><div class=\"col-md-6\"><h6 class=\"text-center\">描述</h6><p class=\"text-center\">" + info.desc +	"</p></div><div class=\"col-md-6\"><h6 class=\"text-center\">链接</h6><p class=\"text-center\">" + info.link + "</p></div></div>" +
+								"<div class=\"row\"><div class=\"col-md-6\"><h6 class=\"text-center\">第一次活动时间</h6><p class=\"text-center\">" + UA[i].stime + "</p></div><div class=\"col-md-6\"><h6 class=\"text-center\">最后一次活动时间</h6><p class=\"text-center\">" + UA[i].etime + "</p></div></div>";
+							if(UA[i].type==="1"){
+							    UATable = UATable + "<div class=\"row\"><div class=\"col-md-6\"><h6 class=\"text-center\">类型</h6><p class=\"text-center\"><span class=\"label label-danger\">恶意</span></p></div><div class=\"col-md-6\"><h6 class=\"text-center\">种类</h6><p class=\"text-center\">" + info.type + "</p></div></div>";
+							}else{
+							    UATable = UATable + "<div class=\"row\"><div class=\"col-md-6\"><h6 class=\"text-center\">类型</h6><p class=\"text-center\"><span class=\"label label-success\">良性</span></p></div><div class=\"col-md-6\"><h6 class=\"text-center\">种类</h6><p class=\"text-center\">" + info.type + "</p></div></div>";
+							}
+							if(i<UA.length-1){
+							    UATable = UATable + "<hr>"
+							}
+						}
+						UATable = "<p data-toggle=\"modal\" data-target=\"." + item.IP.replace(/\./g,"_") + "\">详细信息</p>" +
+							"<div class=\"modal fade " + item.IP.replace(/\./g,"_") + "\" tabindex=\"-1\" role=\"dialog\" aria-labelledby=\"gridSystemModalLabel\" aria-hidden=\"true\" style=\"display: none;\">" +
+							"<div class=\"modal-dialog modal-lg\">" +
+							"<div class=\"modal-content\">" +
+							"<div class=\"modal-header\">" +
+							"<button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-hidden=\"true\">×</button>" +
+							"<h5 class=\"modal-title\" id=\"myLargeModalLabel\">详细信息</h5>" +
+							"</div><div class=\"modal-body\">" +
+							UATable + "</div><div class=\"modal-footer\">" +
+							"<button type=\"button\" class=\"btn btn-danger text-left\" data-dismiss=\"modal\">Close</button>" +
+							"</div></div></div></div>";
+						UATable = "<tr><td>" + item.IP +
+							"</td><td>" + item.total +
+							"</td><td>" + item.malicious +
+							"</td><td>" + UATable + "</td></tr>";
+						$("#results-display").append(UATable);
+					});
+				});
+			});
+        });
+	</script>
 </head>
 
 <body>
@@ -66,13 +108,13 @@
 					<i class="zmdi zmdi-more"></i>
 				</li>
 				<li>
-					<a target="_blank" href="inner_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">内网IP信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" class="active" href="inner_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">内网IP信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
 					<a target="_blank" href="ua_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">UA详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a target="_blank" class="active" href="outer_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">通信服务器信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="outer_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">通信服务器信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
@@ -164,52 +206,30 @@
     </div>
     <!-- /#wrapper -->
 
+
 	<!-- JavaScript -->
 
-    <!-- jQuery -->
-    <script src="../vendors/bower_components/jquery/dist/jquery.min.js"></script>
+		<!-- Bootstrap Core JavaScript -->
+		<script src="../vendors/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../vendors/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+		<!-- Data table JavaScript -->
+		<script src="../vendors/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
+		<script src="dist/js/dataTables-data.js"></script>
 
-	<!-- Data table JavaScript -->
-	<script src="../vendors/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
-    <script src="dist/js/dataTables-data.js"></script>
+		<!-- Slimscroll JavaScript -->
+		<script src="dist/js/jquery.slimscroll.js"></script>
 
-	<!-- Slimscroll JavaScript -->
-	<script src="dist/js/jquery.slimscroll.js"></script>
+		<!-- Fancy Dropdown JS -->
+		<script src="dist/js/dropdown-bootstrap-extended.js"></script>
 
-	<!-- Progressbar Animation JavaScript -->
-	<script src="../vendors/bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
-	<script src="../vendors/bower_components/jquery.counterup/jquery.counterup.min.js"></script>
+		<!-- Owl JavaScript -->
+		<script src="../vendors/bower_components/owl.carousel/dist/owl.carousel.min.js"></script>
 
-	<!-- Fancy Dropdown JS -->
-	<script src="dist/js/dropdown-bootstrap-extended.js"></script>
+		<!-- Switchery JavaScript -->
+		<script src="../vendors/bower_components/switchery/dist/switchery.min.js"></script>
 
-	<!-- Sparkline JavaScript -->
-	<script src="../vendors/jquery.sparkline/dist/jquery.sparkline.min.js"></script>
-
-	<!-- Owl JavaScript -->
-	<script src="../vendors/bower_components/owl.carousel/dist/owl.carousel.min.js"></script>
-
-	<!-- Toast JavaScript -->
-	<script src="../vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.js"></script>
-
-	<!-- EChartJS JavaScript -->
-	<script src="../vendors/bower_components/echarts/dist/echarts-en.min.js"></script>
-	<script src="../vendors/echarts-liquidfill.min.js"></script>
-
-	<!-- Switchery JavaScript -->
-	<script src="../vendors/bower_components/switchery/dist/switchery.min.js"></script>
-
-	<!-- Init JavaScript -->
-	<script src="dist/js/index/init.js"></script>
-	<script src="dist/js/dashboard-data.js"></script>
-
-    <!-- Morris Charts JavaScript -->
-    <script src="../vendors/bower_components/raphael/raphael.min.js"></script>
-    <script src="../vendors/bower_components/morris.js/morris.min.js"></script>
-    <script src="dist/js/morris-data.js"></script>
+		<!-- Init JavaScript -->
+		<script src="dist/js/init.js"></script>
 </body>
 
 </html>
