--- a/webPage/pages/inner_detail.html
+++ b/webPage/pages/inner_detail.html
@@ -66,13 +66,13 @@
 					<i class="zmdi zmdi-more"></i>
 				</li>
 				<li>
-					<a target="_blank" href="inner_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">内网IP信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" class="active" href="inner_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">内网IP信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
 					<a target="_blank" href="ua_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">UA详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a target="_blank" class="active" href="outer_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">通信服务器信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="outer_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">通信服务器信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
