--- a/webPage/pages/ua_detail.html
+++ b/webPage/pages/ua_detail.html
@@ -7,22 +7,13 @@
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="../img/favicon.png">
-	<link rel="icon" href="../img/favicon.png" type="image/x-icon">
+	<link rel="icon" href="../img/favicon.png" type="image/x-icon">>
 
 	<!-- Data table CSS -->
 	<link href="../vendors/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/>
 
-	<!-- Toast CSS -->
-	<link href="../vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.css" rel="stylesheet" type="text/css">
-
-	<!-- Morris Charts CSS -->
-    <link href="../vendors/bower_components/morris.js/morris.css" rel="stylesheet" type="text/css"/>
-
 	<!-- vector map CSS -->
 	<link href="../vendors/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" type="text/css"/>
-
-	<!-- Footable CSS -->
-	<link href="../vendors/bower_components/FooTable/compiled/footable.bootstrap.min.css" rel="stylesheet" type="text/css"/>
 
 	<!-- Custom CSS -->
 	<link href="dist/css/style.css" rel="stylesheet" type="text/css">
@@ -30,21 +21,43 @@
     <!-- jQuery -->
     <script src="../vendors/bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript">
-		$.getJSON ("/report/Background_PC/index.json", function (data) {
+		$.getJSON ("testFiles/index.json", function (data) {
+//		$.getJSON ("/report/innerIP/index.json", function (data) {
 		    $.each(data, function (i, item) {
 				$.getJSON(item, function (data) {
 					$.each(data, function (i, item) {
-					    var info = item.info;
-						$("#results-display").append("<tr><td>" + item.srcIP +
-							"</td><td>" + item.srcPort +
-							"</td><td>" + item.dstIP +
-							"</td><td>" + item.dstPort +
-							"</td><td>" + item.time +
-							"</td><td>" + item.UA +
-							"</td><td>" + info.comment +
-							"</td><td>" + info.desc +
-							"</td><td>" + info.link +
-							"</td><td>" + info.type + "</td></tr>");
+					    var UA = item.UA;
+					    var UATable = "";
+					    for(var i=0;i<UA.length;i++){
+							var info = UA[i].info;
+							UATable = UATable + "<div class=\"row\"><div class=\"col-md-6\"><h6 class=\"text-center\">名称</h6><p class=\"text-center\">" + UA[i].name +	"</p></div><div class=\"col-md-6\"><h6 class=\"text-center\">备注</h6><p class=\"text-center\">" + info.comment + "</p></div></div>" +
+								"<div class=\"row\"><div class=\"col-md-6\"><h6 class=\"text-center\">描述</h6><p class=\"text-center\">" + info.desc +	"</p></div><div class=\"col-md-6\"><h6 class=\"text-center\">链接</h6><p class=\"text-center\">" + info.link + "</p></div></div>" +
+								"<div class=\"row\"><div class=\"col-md-6\"><h6 class=\"text-center\">第一次活动时间</h6><p class=\"text-center\">" + UA[i].stime + "</p></div><div class=\"col-md-6\"><h6 class=\"text-center\">最后一次活动时间</h6><p class=\"text-center\">" + UA[i].etime + "</p></div></div>";
+							if(UA[i].type==="1"){
+							    UATable = UATable + "<div class=\"row\"><div class=\"col-md-6\"><h6 class=\"text-center\">类型</h6><p class=\"text-center\"><span class=\"label label-danger\">恶意</span></p></div><div class=\"col-md-6\"><h6 class=\"text-center\">种类</h6><p class=\"text-center\">" + info.type + "</p></div></div>";
+							}else{
+							    UATable = UATable + "<div class=\"row\"><div class=\"col-md-6\"><h6 class=\"text-center\">类型</h6><p class=\"text-center\"><span class=\"label label-success\">良性</span></p></div><div class=\"col-md-6\"><h6 class=\"text-center\">种类</h6><p class=\"text-center\">" + info.type + "</p></div></div>";
+							}
+							if(i<UA.length-1){
+							    UATable = UATable + "<hr>"
+							}
+						}
+						UATable = "<p data-toggle=\"modal\" data-target=\"." + item.IP.replace(/\./g,"_") + "\">详细信息</p>" +
+							"<div class=\"modal fade " + item.IP.replace(/\./g,"_") + "\" tabindex=\"-1\" role=\"dialog\" aria-labelledby=\"gridSystemModalLabel\" aria-hidden=\"true\" style=\"display: none;\">" +
+							"<div class=\"modal-dialog modal-lg\">" +
+							"<div class=\"modal-content\">" +
+							"<div class=\"modal-header\">" +
+							"<button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-hidden=\"true\">×</button>" +
+							"<h5 class=\"modal-title\" id=\"myLargeModalLabel\">详细信息</h5>" +
+							"</div><div class=\"modal-body\">" +
+							UATable + "</div><div class=\"modal-footer\">" +
+							"<button type=\"button\" class=\"btn btn-danger text-left\" data-dismiss=\"modal\">Close</button>" +
+							"</div></div></div></div>";
+						UATable = "<tr><td>" + item.IP +
+							"</td><td>" + item.total +
+							"</td><td>" + item.malicious +
+							"</td><td>" + UATable + "</td></tr>";
+						$("#results-display").append(UATable);
 					});
 				});
 			});
@@ -98,10 +111,10 @@
 					<a target="_blank" href="inner_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">内网IP信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a target="_blank" href="ua_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">UA详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" class="active" href="ua_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">UA详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a target="_blank" class="active" href="outer_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">通信服务器信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="outer_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">通信服务器信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
@@ -153,24 +166,20 @@
 							<div class="panel-wrapper collapse in">
 								<div class="panel-body">
 									<div class="table-wrap">
-										<table id="footable_3" class="table" data-filtering="true"  data-show-toggle="false">
-											<thead>
-												<tr>
-													<th>Src IP</th>
-													<th>Src Port</th>
-													<th>Dst IP</th>
-													<th>Dst Port</th>
-													<th>Time</th>
-													<th data-breakpoints="all" data-title="User-Agent">User-Agent</th>
-													<th data-breakpoints="all" data-title="Comment">Comment</th>
-													<th data-breakpoints="all" data-title="Description">Description</th>
-													<th data-breakpoints="all" data-title="Link">Link</th>
-													<th data-breakpoints="all" data-title="Type">Type</th>
-												</tr>
-											</thead>
-											<tbody id="results-display">
-											</tbody>
-										</table>
+										<div class="table-responsive">
+											<table id="datable_1" class="table table-hover display  pb-30">
+												<thead>
+													<tr>
+														<th>IP地址</th>
+														<th>UA总数</th>
+														<th>恶意UA数量</th>
+														<th>查看所有UA</th>
+													</tr>
+												</thead>
+												<tbody id="results-display">
+												</tbody>
+											</table>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -197,24 +206,17 @@
     </div>
     <!-- /#wrapper -->
 
-
 	<!-- JavaScript -->
 
+    <!-- jQuery -->
+    <script src="../vendors/bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="../vendors/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 	<!-- Data table JavaScript -->
 	<script src="../vendors/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
-	<script src="../vendors/bower_components/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
-	<script src="../vendors/bower_components/datatables.net-buttons/js/buttons.flash.min.js"></script>
-	<script src="../vendors/bower_components/jszip/dist/jszip.min.js"></script>
-	<script src="../vendors/bower_components/pdfmake/build/pdfmake.min.js"></script>
-	<script src="../vendors/bower_components/pdfmake/build/vfs_fonts.js"></script>
-	<script src="../vendors/bower_components/moment/min/moment.min.js"></script>
-	<script src="../vendors/bower_components/FooTable/compiled/footable.min.js" type="text/javascript"></script>
-	<script src="dist/js/footable-data.js"></script>
-
+    <script src="dist/js/dataTables-data.js"></script>
 
 	<!-- Slimscroll JavaScript -->
 	<script src="dist/js/jquery.slimscroll.js"></script>
@@ -245,6 +247,11 @@
 	<!-- Init JavaScript -->
 	<script src="dist/js/index/init.js"></script>
 	<script src="dist/js/dashboard-data.js"></script>
+
+    <!-- Morris Charts JavaScript -->
+    <script src="../vendors/bower_components/raphael/raphael.min.js"></script>
+    <script src="../vendors/bower_components/morris.js/morris.min.js"></script>
+    <script src="dist/js/morris-data.js"></script>
 </body>
 
 </html>
