--- a/webPage/pages/ua_detail.html
+++ b/webPage/pages/ua_detail.html
@@ -7,7 +7,7 @@
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="../img/favicon.png">
-	<link rel="icon" href="../img/favicon.png" type="image/x-icon">>
+	<link rel="icon" href="../img/favicon.png" type="image/x-icon">
 
 	<!-- Data table CSS -->
 	<link href="../vendors/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/>
