--- a/webPage/pages/inner_detail.html
+++ b/webPage/pages/inner_detail.html
@@ -164,9 +164,6 @@
     </div>
     <!-- /#wrapper -->
 
-</body>
-
-</html>
 	<!-- JavaScript -->
 
     <!-- jQuery -->
@@ -177,7 +174,7 @@
 
 	<!-- Data table JavaScript -->
 	<script src="../vendors/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
-    <script src="dist/js/dataTables-data.js"></script>
+    <!--<script src="dist/js/dataTables-data.js"></script>-->
 
 	<!-- Slimscroll JavaScript -->
 	<script src="dist/js/jquery.slimscroll.js"></script>
@@ -213,3 +210,6 @@
     <script src="../vendors/bower_components/raphael/raphael.min.js"></script>
     <script src="../vendors/bower_components/morris.js/morris.min.js"></script>
     <script src="dist/js/morris-data.js"></script>
+</body>
+
+</html>
