--- a/webPage/pages/ua_detail.html
+++ b/webPage/pages/ua_detail.html
@@ -63,6 +63,9 @@
 					<i class="zmdi zmdi-more"></i>
 				</li>
 				<li>
+					<a target="_blank" href="detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">检测结果</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+				</li>
+				<li>
 					<a target="_blank" href="inner_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">内网IP信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
