--- a/webPage/pages/detail.html
+++ b/webPage/pages/detail.html
@@ -142,11 +142,7 @@
 													<th>Dst Port</th>
 													<th>Time</th>
 													<th>Type</th>
-													<th data-breakpoints="all" data-title="User-Agent">User-Agent</th>
-													<th data-breakpoints="all" data-title="Comment">Comment</th>
-													<th data-breakpoints="all" data-title="Description">Description</th>
-													<th data-breakpoints="all" data-title="Link">Link</th>
-													<th data-breakpoints="all" data-title="Type">Type</th>
+													<th>User-Agent</th>
 												</tr>
 											</thead>
 											<tbody id="results-display">
